crates/lang/tests/ui/trait_def/fail/message_receiver_invalid_1.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message)]
    fn message();
}

fn main() {}
