crates/lang/tests/ui/trait_def/fail/message_receiver_invalid_1.stderr
error: missing or malformed `&self` or `&mut self` receiver for ink! message
 --> tests/ui/trait_def/fail/message_receiver_invalid_1.rs:6:5
  |
6 |     fn message();
  |     ^^^^^^^^^^^^
